--- a/backend/.env.sample
+++ b/backend/.env.sample
@@ -2,3 +2,7 @@ PORT=8000
 CLIENT_URL=http://localhost:3000
 MONGO_URI=
 JWT_SECRET=your_jwt_secret
+
+CLOUDINARY_CLOUD_NAME
+CLOUDINARY_API_KEY=
+CLOUDINARY_API_KEY_SECRET=
